# pdf-to-llm-converter

./: .gitignore  CONTRIBUTING.md  GITHUB_SETUP_INSTRUCTIONS.md  GIT_STATUS.md  LICENSE  README.md  SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
.kiro/specs/pdf-to-llm-converter/: design.md  requirements.md  tasks.md
examples/: README.md  example_usage.py
pdf_to_llm_converter/: __init__.py  chunk_manager.py  cli.py  content_merger.py  markdown_converter.py  models.py  ocr_engine.py  page_classifier.py  pdf_processor.py  qa_matcher.py  text_extractor.py
tests/: test_chunk_manager.py  test_cli.py  test_content_merger.py  test_extraction_routing.py  test_markdown_converter.py  test_ocr_engine.py  test_page_classifier.py  test_pdf_processor.py  test_qa_matcher.py  test_text_extractor.py
